warnings in sdo, moxy, dbws
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>